tests/snapshots/snapshots__snapshot_er_styled_w120.snap
---
source: tests/snapshots.rs
expression: output
---
[1;38;2;210;140;40m# ER styled[0m

[38;2;180;90;60m+----------------+[0m         [38;2;110;115;100m+--------------------------+[0m
[38;2;180;90;60m|[0m[38;2;190;180;160m Notification   [0m[38;2;180;90;60m|[0m         [38;2;110;115;100m|[0m Pref                     [38;2;110;115;100m|[0m
[38;2;180;90;60m|----------------|[0m         [38;2;110;115;100m|--------------------------|[0m
[38;2;180;90;60m|[0m[38;2;190;180;160m PK string id   [0m[38;2;180;90;60m|[0m[38;2;120;160;80m||[0m─has──[38;2;120;160;80mo{[0m PK string id             [38;2;110;115;100m|[0m
[38;2;180;90;60m|[0m[38;2;190;180;160m    string name [0m[38;2;180;90;60m|[0m         [38;2;110;115;100m|[0m FK string notificationId [38;2;110;115;100m|[0m
[38;2;180;90;60m+----------------+[0m         [38;2;110;115;100m|[0m    bool   enabled        [38;2;110;115;100m|[0m
                           [38;2;110;115;100m+--------------------------+[0m
