tests/snapshots/snapshots__snapshot_flowchart_advanced_w120.snap
---
source: tests/snapshots.rs
expression: output
---
[1;38;2;210;140;40m# Advanced Flowcharts[0m

[1;38;2;180;90;60m## CI/CD Pipeline[0m

                                                                                                 [38;2;180;90;60m┌─────────────┐[0m
                                                                                              ┌─►[38;2;180;90;60m│[0m [38;2;190;180;160mDeploy Prod[0m [38;2;180;90;60m│[0m
                                                   [38;2;180;90;60m┌────────────────┐[0m      [38;2;180;90;60m/──────────────\[0m [38;2;130;140;110mYes[0m  [38;2;180;90;60m└─────────────┘[0m
[38;2;180;90;60m╭───────╮[0m      [38;2;180;90;60m┌───────┐[0m      [38;2;180;90;60m/─────────────\[0m [38;2;130;140;110mYes[0m─►[38;2;180;90;60m│[0m [38;2;190;180;160mDeploy Staging[0m [38;2;180;90;60m│[0m─────►[38;2;180;90;60m<[0m [38;2;190;180;160mQA Approved?[0m [38;2;180;90;60m>[0m───┤
[38;2;180;90;60m│[0m [38;2;190;180;160mStart[0m [38;2;180;90;60m│[0m────┬►[38;2;180;90;60m│[0m [38;2;190;180;160mBuild[0m [38;2;180;90;60m│[0m─────►[38;2;180;90;60m<[0m [38;2;190;180;160mTests Pass?[0m [38;2;180;90;60m>[0m───┤  [38;2;180;90;60m└────────────────┘[0m      [38;2;180;90;60m\──────────────/[0m   │
[38;2;180;90;60m╰───────╯[0m    │ [38;2;180;90;60m└───────┘[0m      [38;2;180;90;60m\─────────────/[0m  [38;2;130;140;110mNo[0m                                            [38;2;130;140;110mNo[0m
             │                                  │                                             │
             │                                  └─────────────────────────────────────────────┤  [38;2;180;90;60m┌────────────┐[0m
             │                                                                                └─►[38;2;180;90;60m│[0m [38;2;190;180;160mNotify Dev[0m [38;2;180;90;60m│[0m──┐
             │                                                                                   [38;2;180;90;60m└────────────┘[0m  │
             │                                                                                                   │
             │                                                                                                   │
             └───────────────────────────────────────────────────────────────────────────────────────────────────┘

[1;38;2;180;90;60m## Error Handling Flow[0m

              [38;2;180;90;60m┌─────────────┐[0m
              [38;2;180;90;60m│[0m [38;2;190;180;160mAPI Request[0m [38;2;180;90;60m│[0m
              [38;2;180;90;60m└─────────────┘[0m
                     │
                     │
                     │
                     ▼
                    [38;2;180;90;60m/\[0m
                    [38;2;180;90;60m/[0m [38;2;180;90;60m\[0m
                   [38;2;180;90;60m/[0m   [38;2;180;90;60m\[0m
                  [38;2;180;90;60m/[0m     [38;2;180;90;60m\[0m
                 [38;2;180;90;60m/[0m       [38;2;180;90;60m\[0m
                [38;2;180;90;60m/[0m[38;2;190;180;160mAuth OK?[0m [38;2;180;90;60m\[0m
                 [38;2;180;90;60m\[0m       [38;2;180;90;60m/[0m
                  [38;2;180;90;60m\[0m     [38;2;180;90;60m/[0m
                   [38;2;180;90;60m\[0m   [38;2;180;90;60m/[0m
                    [38;2;180;90;60m\[0m [38;2;180;90;60m/[0m
                    [38;2;180;90;60m\/[0m
                     │
              [38;2;130;140;110mNo[0m     │    [38;2;130;140;110mYes[0m
          ┌──────────┴────────────┐
          ▼                       ▼
[38;2;180;90;60m┌──────────────────┐[0m             [38;2;180;90;60m/\[0m
[38;2;180;90;60m│[0m [38;2;190;180;160m401 Unauthorized[0m [38;2;180;90;60m│[0m             [38;2;180;90;60m/[0m [38;2;180;90;60m\[0m
[38;2;180;90;60m└──────────────────┘[0m            [38;2;180;90;60m/[0m   [38;2;180;90;60m\[0m
                               [38;2;180;90;60m/[0m     [38;2;180;90;60m\[0m
                              [38;2;180;90;60m/[0m       [38;2;180;90;60m\[0m
                             [38;2;180;90;60m/[0m         [38;2;180;90;60m\[0m
                            [38;2;180;90;60m/[0m           [38;2;180;90;60m\[0m
                           [38;2;180;90;60m/[0m             [38;2;180;90;60m\[0m
                          [38;2;180;90;60m/[0m[38;2;190;180;160mRate Limited?[0m  [38;2;180;90;60m\[0m
                           [38;2;180;90;60m\[0m             [38;2;180;90;60m/[0m
                            [38;2;180;90;60m\[0m           [38;2;180;90;60m/[0m
                             [38;2;180;90;60m\[0m         [38;2;180;90;60m/[0m
                              [38;2;180;90;60m\[0m       [38;2;180;90;60m/[0m
                               [38;2;180;90;60m\[0m     [38;2;180;90;60m/[0m
                                [38;2;180;90;60m\[0m   [38;2;180;90;60m/[0m
                                 [38;2;180;90;60m\[0m [38;2;180;90;60m/[0m
                                 [38;2;180;90;60m\/[0m
                                  │
                    [38;2;130;140;110mYes[0m         [38;2;130;140;110mNo[0m│
         ┌──────────────────────┬─┘
         ▼                      ▼
 [38;2;180;90;60m┌──────────────┐[0m      [38;2;180;90;60m┌─────────────────┐[0m
 [38;2;180;90;60m│[0m [38;2;190;180;160m429 Too Many[0m [38;2;180;90;60m│[0m      [38;2;180;90;60m│[0m [38;2;190;180;160mProcess Request[0m [38;2;180;90;60m│[0m
 [38;2;180;90;60m└──────────────┘[0m      [38;2;180;90;60m└─────────────────┘[0m
                                │
                                │
                     ┌──────────┘
                     ▼
                    [38;2;180;90;60m/\[0m
                    [38;2;180;90;60m/[0m [38;2;180;90;60m\[0m
                   [38;2;180;90;60m/[0m   [38;2;180;90;60m\[0m
                  [38;2;180;90;60m/[0m     [38;2;180;90;60m\[0m
                 [38;2;180;90;60m/[0m       [38;2;180;90;60m\[0m
                [38;2;180;90;60m/[0m[38;2;190;180;160mSuccess?[0m [38;2;180;90;60m\[0m
                 [38;2;180;90;60m\[0m       [38;2;180;90;60m/[0m
                  [38;2;180;90;60m\[0m     [38;2;180;90;60m/[0m
                   [38;2;180;90;60m\[0m   [38;2;180;90;60m/[0m
                    [38;2;180;90;60m\[0m [38;2;180;90;60m/[0m
                    [38;2;180;90;60m\/[0m
                     │
               [38;2;130;140;110mYes[0m   │  [38;2;130;140;110mNo[0m
            ┌────────┴───────┐
            ▼                ▼
       [38;2;180;90;60m┌────────┐[0m      [38;2;180;90;60m┌───────────┐[0m
       [38;2;180;90;60m│[0m [38;2;190;180;160m200 OK[0m [38;2;180;90;60m│[0m      [38;2;180;90;60m│[0m [38;2;190;180;160m500 Error[0m [38;2;180;90;60m│[0m
       [38;2;180;90;60m└────────┘[0m      [38;2;180;90;60m└───────────┘[0m

[1;38;2;180;90;60m## Node Shapes[0m

[38;2;190;180;160mDifferent node shapes available:[0m

[38;2;180;90;60m┌───────────┐[0m      [38;2;180;90;60m╭─────────╮[0m      [38;2;180;90;60m/─────────\[0m      [38;2;180;90;60m╭────────╮[0m
[38;2;180;90;60m│[0m [38;2;190;180;160mRectangle[0m [38;2;180;90;60m│[0m─────►[38;2;180;90;60m│[0m [38;2;190;180;160mRounded[0m [38;2;180;90;60m│[0m─────►[38;2;180;90;60m<[0m [38;2;190;180;160mDiamond[0m [38;2;180;90;60m>[0m─────►[38;2;180;90;60m│[0m [38;2;190;180;160mCircle[0m [38;2;180;90;60m│[0m
[38;2;180;90;60m└───────────┘[0m      [38;2;180;90;60m╰─────────╯[0m      [38;2;180;90;60m\─────────/[0m      [38;2;180;90;60m╰────────╯[0m

[1;38;2;180;90;60m## Edge Styles[0m

[38;2;190;180;160mDifferent edge connection styles:[0m

[38;2;180;90;60m┌─────────────┐[0m      [38;2;180;90;60m┌────────────┐[0m      [38;2;180;90;60m┌──────────────┐[0m      [38;2;180;90;60m┌─────────────┐[0m
[38;2;180;90;60m│[0m [38;2;190;180;160mSolid Arrow[0m [38;2;180;90;60m│[0m      [38;2;180;90;60m│[0m [38;2;190;180;160mPlain Line[0m [38;2;180;90;60m│[0m      [38;2;180;90;60m│[0m [38;2;190;180;160mDotted Arrow[0m [38;2;180;90;60m│[0m      [38;2;180;90;60m│[0m [38;2;190;180;160mThick Arrow[0m [38;2;180;90;60m│[0m
[38;2;180;90;60m└─────────────┘[0m      [38;2;180;90;60m└────────────┘[0m      [38;2;180;90;60m└──────────────┘[0m      [38;2;180;90;60m└─────────────┘[0m
       │                    │                    :                    ║
       │                    │                    :                    ║
       └───────┐            └──┐               ┌.┘             ┌══════┘
               ▼               │               ▼               ▼
          [38;2;180;90;60m┌────────┐[0m      [38;2;180;90;60m┌────────┐[0m      [38;2;180;90;60m┌────────┐[0m      [38;2;180;90;60m┌────────┐[0m
          [38;2;180;90;60m│[0m [38;2;190;180;160mTarget[0m [38;2;180;90;60m│[0m      [38;2;180;90;60m│[0m [38;2;190;180;160mTarget[0m [38;2;180;90;60m│[0m      [38;2;180;90;60m│[0m [38;2;190;180;160mTarget[0m [38;2;180;90;60m│[0m      [38;2;180;90;60m│[0m [38;2;190;180;160mTarget[0m [38;2;180;90;60m│[0m
          [38;2;180;90;60m└────────┘[0m      [38;2;180;90;60m└────────┘[0m      [38;2;180;90;60m└────────┘[0m      [38;2;180;90;60m└────────┘[0m
