tests/snapshots/snapshots__snapshot_flowchart_simple_w120.snap
---
source: tests/snapshots.rs
expression: output
---
[1;38;2;210;140;40m# Simple Flowcharts[0m

[1;38;2;180;90;60m## Linear Flow[0m

[38;2;190;180;160mA basic top-down sequence:[0m

   [38;2;180;90;60m┌───────┐[0m
   [38;2;180;90;60m│[0m [38;2;190;180;160mStart[0m [38;2;180;90;60m│[0m
   [38;2;180;90;60m└───────┘[0m
       │
       │
       │
       ▼
[38;2;180;90;60m┌──────────────┐[0m
[38;2;180;90;60m│[0m [38;2;190;180;160mProcess Data[0m [38;2;180;90;60m│[0m
[38;2;180;90;60m└──────────────┘[0m
        │
        │
        │
        ▼
[38;2;180;90;60m┌──────────────┐[0m
[38;2;180;90;60m│[0m [38;2;190;180;160mSave Results[0m [38;2;180;90;60m│[0m
[38;2;180;90;60m└──────────────┘[0m
        │
        │
        │
        ▼
    [38;2;180;90;60m┌──────┐[0m
    [38;2;180;90;60m│[0m [38;2;190;180;160mDone[0m [38;2;180;90;60m│[0m
    [38;2;180;90;60m└──────┘[0m

[1;38;2;180;90;60m## Decision Branch[0m

[38;2;190;180;160mA flowchart with a yes/no decision:[0m

       [38;2;180;90;60m┌─────────────────┐[0m
       [38;2;180;90;60m│[0m [38;2;190;180;160mReceive Request[0m [38;2;180;90;60m│[0m
       [38;2;180;90;60m└─────────────────┘[0m
                │
                │
                │
                ▼
               [38;2;180;90;60m/\[0m
               [38;2;180;90;60m/[0m [38;2;180;90;60m\[0m
              [38;2;180;90;60m/[0m   [38;2;180;90;60m\[0m
             [38;2;180;90;60m/[0m     [38;2;180;90;60m\[0m
            [38;2;180;90;60m/[0m       [38;2;180;90;60m\[0m
           [38;2;180;90;60m/[0m         [38;2;180;90;60m\[0m
          [38;2;180;90;60m/[0m[38;2;190;180;160mIs Valid?[0m  [38;2;180;90;60m\[0m
           [38;2;180;90;60m\[0m         [38;2;180;90;60m/[0m
            [38;2;180;90;60m\[0m       [38;2;180;90;60m/[0m
             [38;2;180;90;60m\[0m     [38;2;180;90;60m/[0m
              [38;2;180;90;60m\[0m   [38;2;180;90;60m/[0m
               [38;2;180;90;60m\[0m [38;2;180;90;60m/[0m
               [38;2;180;90;60m\/[0m
                │
         [38;2;130;140;110mYes[0m    │  [38;2;130;140;110mNo[0m
     ┌──────────┴────────┐
     ▼                   ▼
[38;2;180;90;60m┌─────────┐[0m      [38;2;180;90;60m┌──────────────┐[0m
[38;2;180;90;60m│[0m [38;2;190;180;160mProcess[0m [38;2;180;90;60m│[0m      [38;2;180;90;60m│[0m [38;2;190;180;160mReturn Error[0m [38;2;180;90;60m│[0m
[38;2;180;90;60m└─────────┘[0m      [38;2;180;90;60m└──────────────┘[0m
     │                   │
     │                   │
     └──────────┬────────┘
                ▼
        [38;2;180;90;60m┌───────────────┐[0m
        [38;2;180;90;60m│[0m [38;2;190;180;160mSend Response[0m [38;2;180;90;60m│[0m
        [38;2;180;90;60m└───────────────┘[0m

[1;38;2;180;90;60m## Left-to-Right Flow[0m

[38;2;190;180;160mThe same pipeline rendered horizontally:[0m

[38;2;180;90;60m┌───────┐[0m      [38;2;180;90;60m┌───────┐[0m      [38;2;180;90;60m┌──────────┐[0m      [38;2;180;90;60m┌───────────┐[0m      [38;2;180;90;60m┌────────┐[0m
[38;2;180;90;60m│[0m [38;2;190;180;160mInput[0m [38;2;180;90;60m│[0m─────►[38;2;180;90;60m│[0m [38;2;190;180;160mParse[0m [38;2;180;90;60m│[0m─────►[38;2;180;90;60m│[0m [38;2;190;180;160mValidate[0m [38;2;180;90;60m│[0m─────►[38;2;180;90;60m│[0m [38;2;190;180;160mTransform[0m [38;2;180;90;60m│[0m─────►[38;2;180;90;60m│[0m [38;2;190;180;160mOutput[0m [38;2;180;90;60m│[0m
[38;2;180;90;60m└───────┘[0m      [38;2;180;90;60m└───────┘[0m      [38;2;180;90;60m└──────────┘[0m      [38;2;180;90;60m└───────────┘[0m      [38;2;180;90;60m└────────┘[0m
