tests/snapshots/snapshots__snapshot_flowchart_simple_w80.snap
---
source: tests/snapshots.rs
expression: output
---
[1;38;2;210;140;40m# Simple Flowcharts[0m

[1;38;2;180;90;60m## Linear Flow[0m

[38;2;190;180;160mA basic top-down sequence:[0m

   ┌───────┐
   │ Start │
   └───────┘
       │
       │
       │
       ▼
┌──────────────┐
│ Process Data │
└──────────────┘
        │
        │
        │
        ▼
┌──────────────┐
│ Save Results │
└──────────────┘
        │
        │
        │
        ▼
    ┌──────┐
    │ Done │
    └──────┘

[1;38;2;180;90;60m## Decision Branch[0m

[38;2;190;180;160mA flowchart with a yes/no decision:[0m

      ┌─────────────────┐
      │ Receive Request │
      └─────────────────┘
               │
               │
               │
               ▼
              /\
              / \
             /   \
            /     \
           /       \
          /         \
         /Is Valid?  \
          \         /
           \       /
            \     /
             \   /
              \ /
              \/
               │
        Yes    │  No
     ┌─────────┴───────┐
     ▼                 ▼
┌─────────┐    ┌──────────────┐
│ Process │    │ Return Error │
└─────────┘    └──────────────┘
     │                 │
     │                 │
     └─────────┬───────┘
               ▼
       ┌───────────────┐
       │ Send Response │
       └───────────────┘

[1;38;2;180;90;60m## Left-to-Right Flow[0m

[38;2;190;180;160mThe same pipeline rendered horizontally:[0m

┌───────┐    ┌───────┐    ┌──────────┐    ┌───────────┐    ┌────────┐
│ Input │───►│ Parse │───►│ Validate │───►│ Transform │───►│ Output │
└───────┘    └───────┘    └──────────┘    └───────────┘    └────────┘
