tests/snapshots/snapshots__snapshot_flowchart_subgraph_w120.snap
---
source: tests/snapshots.rs
expression: output
---
[1;38;2;210;140;40m# Subgraph Pipeline[0m

[1;38;2;180;90;60m## Event Processing Flow[0m



                                                                                                                                                           [38;2;180;90;60m┌───────────────┐[0m
                             [38;2;160;120;60m┌ Message Broker ─────────────────────────────────────────────────────────────────────────────────┐[0m            ┌─────────────►[38;2;180;90;60m│[0m [38;2;190;180;160mExternal Sink[0m [38;2;180;90;60m│[0m
                             [38;2;160;120;60m│[0m                                                                                                 [38;2;160;120;60m│[0m            │              [38;2;180;90;60m└───────────────┘[0m
[38;2;180;90;60m┌──────────────┐[0m             [38;2;160;120;60m│[0m  [38;2;180;90;60m┌────────────────┐[0m              [38;2;180;90;60m┌────────────────┐[0m                  [38;2;180;90;60m┌───────────────────────┐[0m  [38;2;160;120;60m│[0m            │
[38;2;180;90;60m│[0m [38;2;190;180;160mEvent Source[0m [38;2;180;90;60m│[0m───[38;2;130;140;110msend event[0m[38;2;160;120;60m│[0m┬►[38;2;180;90;60m│[0m [38;2;190;180;160mDispatch Queue[0m [38;2;180;90;60m│[0m....[38;2;130;140;110mretry[0m....►[38;2;180;90;60m│[0m [38;2;190;180;160mChannel Router[0m [38;2;180;90;60m│[0m.........┬───────►[38;2;180;90;60m│[0m [38;2;190;180;160mworkerA() / workerB()[0m [38;2;180;90;60m│[0m.┬[38;2;160;120;60m│[0m────────────┤
[38;2;180;90;60m└──────────────┘[0m             [38;2;160;120;60m│[0m: [38;2;180;90;60m└────────────────┘[0m       │      [38;2;180;90;60m└────────────────┘[0m         :        [38;2;180;90;60m└───────────────────────┘[0m :[38;2;160;120;60m│[0m            │           [38;2;160;120;60m┌ Storage Layer ─┐[0m
                             [38;2;160;120;60m│[0m:                          │                                 :                                  :[38;2;160;120;60m│[0m[38;2;130;140;110mDONE · FAIL · STALE rows[0m[38;2;160;120;60m│[0m                [38;2;160;120;60m│[0m
                             [38;2;160;120;60m└─────────────────────────────────────────────────────────────────────────────────────────────────┘[0m            │           [38;2;160;120;60m│[0m  [38;2;180;90;60m┌──────────┐[0m  [38;2;160;120;60m│[0m
                              :                          │                                 :                                  :             ├...........[38;2;160;120;60m│[0m.►[38;2;180;90;60m│[0m [38;2;190;180;160mDatabase[0m [38;2;180;90;60m│[0m  [38;2;160;120;60m│[0m
                              :                          │                                 :                                  :             :           [38;2;160;120;60m│[0m  [38;2;180;90;60m└──────────┘[0m  [38;2;160;120;60m│[0m
                              :                          │                           [38;2;130;140;110mreads config[0m                             :             :           [38;2;160;120;60m│[0m                [38;2;160;120;60m│[0m
                              :                      [38;2;130;140;110mEventLog[0m                        [38;2;130;140;110mDROPPED rows[0m                             :             :           [38;2;160;120;60m└────────────────┘[0m
                              :                          │                                 :                                  :             :
                              :                          │                                 :                                  :             :
                              :                          │                                 :                                  :             :
                              :                          │                                 :                                  :             :
                              :                          │                                 ├..................................┼.............┤
                              :                          │                                 │                                  :             │
                              :                          │                                 │                                  :             │
                              :                          └─────────────────────────────────┼──────────────────────────────────┼─────────────┤
                              :                                                            │                                  :             │
                              :                                                            │                                  :             │
                              :                                                            └──────────────────────────────────┼─────────────┘
                              :                                                                                               :
                              :                                            [38;2;130;140;110mfailed[0m                                             :
                              └...............................................................................................┘
