tests/snapshots/snapshots__snapshot_flowchart_unicode_w120.snap
---
source: tests/snapshots.rs
expression: output
---
[1;38;2;210;140;40m# Unicode labels[0m

[38;2;190;180;160mNode, edge and subgraph labels measured in terminal columns, not bytes.[0m

[38;2;180;90;60m┌────────┐[0m      [38;2;180;90;60m┌──────┐[0m      [38;2;180;90;60m┌───────────┐[0m         [38;2;180;90;60m╭─────╮[0m
[38;2;180;90;60m│[0m [38;2;190;180;160m数据库[0m [38;2;180;90;60m│[0m─[38;2;130;140;110m查询[0m►[38;2;180;90;60m│[0m [38;2;190;180;160mCafé[0m [38;2;180;90;60m│[0m─────►[38;2;180;90;60m│[0m [38;2;190;180;160mÜnïcödé ✓[0m [38;2;180;90;60m│[0m─[38;2;130;140;110mdone 🎉[0m►[38;2;180;90;60m│[0m [38;2;190;180;160mFin[0m [38;2;180;90;60m│[0m
[38;2;180;90;60m└────────┘[0m      [38;2;180;90;60m└──────┘[0m      [38;2;180;90;60m└───────────┘[0m         [38;2;180;90;60m╰─────╯[0m

[38;2;160;120;60m┌ 后端服务 · Backend ────────────────┐[0m
[38;2;160;120;60m│[0m                                    [38;2;160;120;60m│[0m
[38;2;160;120;60m│[0m            [38;2;180;90;60m┌──────────┐[0m            [38;2;160;120;60m│[0m
[38;2;160;120;60m│[0m            [38;2;180;90;60m│[0m [38;2;190;180;160mAPI 网关[0m [38;2;180;90;60m│[0m            [38;2;160;120;60m│[0m
[38;2;160;120;60m│[0m            [38;2;180;90;60m└──────────┘[0m            [38;2;160;120;60m│[0m
[38;2;160;120;60m│[0m                 │                  [38;2;160;120;60m│[0m
[38;2;160;120;60m│[0m                 │                  [38;2;160;120;60m│[0m
[38;2;160;120;60m│[0m                 │                  [38;2;160;120;60m│[0m
[38;2;160;120;60m│[0m                 │                  [38;2;160;120;60m│[0m
[38;2;160;120;60m│[0m                 │                  [38;2;160;120;60m│[0m
[38;2;160;120;60m│[0m                 ▼                  [38;2;160;120;60m│[0m
[38;2;160;120;60m│[0m                [38;2;180;90;60m/\[0m                  [38;2;160;120;60m│[0m
[38;2;160;120;60m│[0m                [38;2;180;90;60m/[0m [38;2;180;90;60m\[0m                 [38;2;160;120;60m│[0m
[38;2;160;120;60m│[0m               [38;2;180;90;60m/[0m   [38;2;180;90;60m\[0m                [38;2;160;120;60m│[0m
[38;2;160;120;60m│[0m              [38;2;180;90;60m/[0m     [38;2;180;90;60m\[0m               [38;2;160;120;60m│[0m
[38;2;160;120;60m│[0m             [38;2;180;90;60m/[0m[38;2;190;180;160m认证?[0m  [38;2;180;90;60m\[0m              [38;2;160;120;60m│[0m
[38;2;160;120;60m│[0m              [38;2;180;90;60m\[0m     [38;2;180;90;60m/[0m               [38;2;160;120;60m│[0m
[38;2;160;120;60m│[0m               [38;2;180;90;60m\[0m   [38;2;180;90;60m/[0m                [38;2;160;120;60m│[0m
[38;2;160;120;60m│[0m                [38;2;180;90;60m\[0m [38;2;180;90;60m/[0m                 [38;2;160;120;60m│[0m
[38;2;160;120;60m│[0m                [38;2;180;90;60m\/[0m                  [38;2;160;120;60m│[0m
[38;2;160;120;60m│[0m                 │                  [38;2;160;120;60m│[0m
[38;2;160;120;60m│[0m                 │                  [38;2;160;120;60m│[0m
[38;2;160;120;60m│[0m           [38;2;130;140;110m是[0m    │   [38;2;130;140;110m否[0m             [38;2;160;120;60m│[0m
[38;2;160;120;60m│[0m        ┌────────┴─────────┐        [38;2;160;120;60m│[0m
[38;2;160;120;60m│[0m        ├..................┼........[38;2;160;120;60m│[0m..┐
[38;2;160;120;60m│[0m        :                  │        [38;2;160;120;60m│[0m  :
[38;2;160;120;60m│[0m        ▼                  ▼        [38;2;160;120;60m│[0m  :
[38;2;160;120;60m│[0m  [38;2;180;90;60m┌──────────┐[0m      [38;2;180;90;60m┌────────────┐[0m  [38;2;160;120;60m│[0m  :
[38;2;160;120;60m│[0m  [38;2;180;90;60m│[0m [38;2;190;180;160m订单服务[0m [38;2;180;90;60m│[0m      [38;2;180;90;60m│[0m [38;2;190;180;160m401 Erreur[0m [38;2;180;90;60m│[0m  [38;2;160;120;60m│[0m  :
[38;2;160;120;60m│[0m  [38;2;180;90;60m└──────────┘[0m      [38;2;180;90;60m└────────────┘[0m  [38;2;160;120;60m│[0m  :
[38;2;160;120;60m│[0m        │                           [38;2;160;120;60m│[0m  :
[38;2;160;120;60m└────────────────────────────────────┘[0m  :
         │                              : [38;2;130;140;110m重试[0m
         └─────────┐                    :
                   │                    :
                   ▼                    :
              [38;2;180;90;60m┌────────┐[0m                :
              [38;2;180;90;60m│[0m [38;2;190;180;160m数据库[0m [38;2;180;90;60m│[0m                :
              [38;2;180;90;60m└────────┘[0m                :
                   :                    :
                   :                    :
                   └....................┘
